<resources>
    <string name="app_name">GankNew</string>

    <string name="umengkey">58372916ae1bf8761e000a1d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="base_api">http://gank.io/api/</string>
    <string name="base">http://gank.io/</string>

    <string name="action_settings">Settings</string>
    <string name="today_recommended">今日推荐</string>
    <string name="type_browse">分类浏览</string>
    <string name="female_welfare">妹子福利</string>
    <string name="my_collect">我的收藏</string>
    <string name="net_error">网络出错了,怪我咯</string>
    <string name="load_error">加载失败\n点击重新加载</string>
    <string name="sort">排序</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="usebrowser">用浏览器浏览</string>
    <string name="copyurl">复制这个url</string>
    <string name="hascopy">已复制到粘贴板上</string>
    <string name="collectsuccess">收藏成功</string>
    <string name="collectfail">收藏失败</string>
    <string name="cancelcollect">取消收藏成功</string>
    <string name="cancelcollectfail">取消收藏失败</string>
    <string name="meizifuli">妹子福利</string>
    <string name="mycollect">我的收藏</string>
    <string name="no_collect_tip">没有收藏哦</string>
    <string name="choosedate">选择日期</string>
    <string name="inputsearch">输入查找内容...</string>
    <string name="commit_url">想要提交的网页地址</string>
    <string name="commit_content">对干货内容的描述</string>
    <string name="commit_id">提交者ID</string>
    <string name="commit_type">干货类型</string>
    <string name="publish">发布</string>
    <string name="imgsave">图片保存在:</string>
    <string name="sharedTitle">Gank妹子图片</string>
    <string name="nopermission_tip">没有权限操作不了呜呜...</string>
    <string name="from_app">来自GankNew的分享</string>
    <string name="from_gank">来自干活集中营</string>
    <string name="set_theme">主题</string>
    <string name="about_app">关于</string>
    <string name="sure">确定</string>
    <string name="project_introduce">项目介绍</string>
    <string name="developers">开发者</string>
    <string name="thank">感谢</string>
    <string name="use_library">用到的库</string>
    <string name="transitionAnimator">transitionAnimator</string>

    <string name="use_library_tip">
        RxJava: https://github.com/ReactiveX/RxJava\n\n
        RxAndroid: https://github.com/ReactiveX/RxAndroid\n\n
        Retrofit: https://github.com/square/retrofit\n\n
        Glide: https://github.com/bumptech/glide\n\n
        EventBus: https://github.com/greenrobot/EventBus\n\n
        ButterKnife:https://github.com/JakeWharton/butterknife\n\n
        BoomMenu: https://github.com/Nightonke/BoomMenu
    </string>

    <string name="thanker">干货集中营:http://gank.io</string>
    <string name="developers_name">Jack921</string>
    <string name="my_github">github:https://github.com/jack921</string>
    <string name="project_introduction">GankNew 是干货集中营众多客户端的一员，可以查看每一天提供的Android,ios,web,
        休息视频等相关的技术干货，还有一张妹子图在等着你哦，除此之外你还可以查看以往的技术干货，发布你自己的技术干货
        ，或者根据关键字搜索先关的内容，同时按照不同的分类查看自己感兴趣的分类的干货如android,ios等，看完还可以收藏，
        分享自己喜欢的干货，对于男同胞来说对对重要的当然是查看瀑布流的妹子列表，想想都高兴，最后支持换肤，总有一种颜色适合你的心情\n\n
        本项目完全开源，用的是现在很多的MVP模式开发，并学习和整个Rxjava,Retrofit,EventBus,ButterKnife的各个优秀开源框架的优点而产生的东西，
        自己学一个完成客户端从开始的设计，调研，都后来的编码，还有一些看似简单其实还是有点麻烦的小细节的实现，整个流程一下来是可以学到很多
        东西的，和激发起自己的很多思考，这也是我觉得做这个最重要的地方。不过由于水平有限，有些不足之处敬请见谅和指出。</string>
    <string name="app_url">http://fir.im/j8c3</string>
    <string name="app_down_tip">GankNew APP欢迎下载</string>

</resources>
